# plato-ghostable

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/plato_ghostable/: __init__.py  ghostable.py
src/plato_ghostable.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
